--- a/css.css
+++ b/css.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 
 h1{
     color: aliceblue;
@@ -18,6 +22,7 @@ h1{
 }
 
 .subcontainer{
+    background-color: #5a423a;
     text-align: center;
     flex-direction: column;
     color: aliceblue;
@@ -26,10 +31,37 @@ h1{
 }
 
 .photos{
-
     display: inline-block;
     width: 300px;
     height: auto;
+    margin-left: 3px;
+}
+
+#container2{
+    margin-top: 5px;
+    display: flex;
+}
+
+#adjust{
+    margin-left: 0px;
+    width: 300px;
+}
+
+.subcontainer3{
+    text-align: center;
+    padding: 30px 15px ;
+    
+}
+
+button{
+    background-color: black;
+    color: aliceblue;
+    padding: 15px ;
+    
+}
+
+button:hover{
+    background-color: #000000c2;
 }
 
 
