--- a/css.css
+++ b/css.css
@@ -1,14 +1,17 @@
-*{
-    box-sizing: border-box;
-}
 
 
 h1{
     color: aliceblue;
     background-color: #5a423a;
 
+    font-family:sans-serif;
+
     text-align: center;
-    margin-bottom: 5px;
+    margin-bottom: 4px;
+}
+
+h2{
+    font-family: sans-serif;
 }
 
 #first{
@@ -33,7 +36,7 @@ h1{
 .photos{
     display: inline-block;
     width: 300px;
-    height: auto;
+    height: 310px;
     margin-left: 3px;
 }
 
